@@ -28,6 +28,7 @@ Bug fixes:
   search.py
 - #429 : copy_submit leaves pasted objects without any associated workflows
   (tests)
+-  #1005 forbid mix workspace and sections
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Small refactoring of folder_localrole_edit.py to move setting `reindex` out
